--- a/drought_analysis_v2.Rmd
+++ b/drought_analysis_v2.Rmd
@@ -4,6 +4,7 @@ output: html_document
 ---
 
 Loading libraries
+
 ```{r}
 library(tidyverse)
 library(RColorBrewer)
@@ -20,107 +21,151 @@ library(readxl)
 ## Height and Size Analysis: Pre-treatment and during treatment
 
 Loading data:
+
 ```{r}
+
 pre_trt_height = readxl::read_xlsx("data/cbs_drought_project.xlsx", 
                            sheet = "Location & Height Pre-Treatment") %>% 
   select(-`Number Leaves`, -`Longest Leaf (cm)`) %>% 
-  rename(Height_pretrt_cm = `Height (cm)`, pop = Population, rep = Replicate) %>% 
-  rename_all(.funs = tolower)
+  rename(Height_pretrt_cm = `Height (cm)`, pop = Population, rep = Replicate, notes_predrought = notes) %>% 
+  rename_all(.funs = tolower) %>% 
+  # Let's just get rid of imposters here. 
+  filter(is.na(notes_predrought)) %>% 
+  select(-notes_predrought)
+
 pre_trt_height
+
 ```
+Pre treatment measurements were made on 9/30/2020. Number of leaves should have been completed, but longest leaf measurements were most likely forgone for lack of follow-up measurements (not enough time/energy to continue follow-up).
+MB: When you have time, why don't you see if the number of leaves from 9/30 is in the datasheets. No problem if not! There was A LOT to measure. 
+Blocks and racks in the pretrt height are their "final" positions after the rearrangement to make a full six racks.
+
 
 ```{r}
+
 weekly_size = readxl::read_xlsx("data/cbs_drought_project.xlsx", sheet = "Weekly Surveys (complete racks)") %>% 
-  filter(!is.na(rep))
+  filter(!is.na(rep)) %>% 
+  # Let's just get rid of imposters here. 
+  filter(is.na(notes)) %>% 
+  select(-notes)
+
 weekly_size
+
 ```
 
 ```{r}
-weekly_size_tall <- weekly_size %>% 
+
+weekly_size_tall_sorted <- weekly_size %>% 
   left_join(pre_trt_height) %>% 
   select(-position, -block, -rack) %>% 
   rename(`09_30_height_cm` = height_pretrt_cm) %>% 
   pivot_longer(`10_09_height_cm`:`09_30_height_cm`) %>% 
   separate(name, 6, into = c("date", "variable")) %>% 
   pivot_wider(id_cols = c(pop, age, rep, treatment, date), names_from = variable, values_from = value, values_fn = mean) %>% 
-  mutate(date = as.Date(paste0(date, 2020), format = "%m_%d_%Y"))
-# May want to make a day of expt column or something to match wilting dates
-weekly_size_tall
-```
-```{r}
-weekly_size_tall <- weekly_size %>% 
-  left_join(pre_trt_height) %>% 
-  select(-position, -block, -rack)
+  # Let's not use the function below, because it turns numeric columns into characters
+  # mutate_all(tolower) %>% 
+  mutate(date = as.Date(paste0(date, 2020), format = "%m_%d_%Y"),
+         age = case_when(age == "A1" ~ "7wk",
+                         age == "A2" ~ "5wk",
+                         age == "A3" ~ "3wk"),
+         elevation = case_when(pop == "SQ1" | pop == "WL2" | pop == "YO1" | pop == "SQ3" ~ "High",
+                               pop == "DPR" | pop == "KC2" | pop == "WL1" ~ "Intermediate",
+                               pop == "TM2" | pop == "BH" | pop == "IH" ~ "Low"),
+         # Here is a day of experiment column that is consistent with the wilting dates frame.
+         # But see note later, I was not sure still quite what day 0 should be.
+         day_of_experiment = as.numeric(date - as.Date("09_30_2020", format = "%m_%d_%Y")),
+         height_cm = as.numeric(height_cm),
+         numleaf = as.numeric(numleaf))
 
-col_order <- c("pop", "age", "rep", "treatment", "10_09_height_cm", "10_09_numleaf", "10_18_height_cm",  "10_18_numleaf", "10_23_height_cm", "10_23_numleaf", "10_30_height_cm", "10_30_numleaf", "height_pretrt_cm", "notes")
+weekly_size_tall_sorted
 
-weekly_size_tall <- weekly_size_tall[, col_order]
-
-weekly_size_tall_sorted <- weekly_size_tall %>% 
-  rename(`09_30_height_cm` = height_pretrt_cm) %>% 
-  pivot_longer(`10_09_height_cm`:`09_30_height_cm`) %>% 
-  separate(name, 6, into = c("date", "variable")) %>% 
-  pivot_wider(id_cols = c(pop, age, rep, treatment, date), names_from = variable, values_from = value, values_fn = mean) %>% 
-  mutate(date = as.Date(paste0(date, 2020), format = "%m_%d_%Y")) %>%
-  mutate_all(tolower) %>% 
-  mutate(age = case_when(age == "a1" ~ "7wk",
-                         age == "a2" ~ "5wk",
-                         age == "a3" ~ "3wk")) %>%
-   mutate(elevation = case_when(pop == "sq1" | pop == "wl2" | pop == "yo1" | pop == "sq3" ~ "high",
-                               pop == "dpr" | pop == "kc2" | pop == "wl1" ~ "intermediate",
-                               pop == "tm2" | pop == "bh" | pop == "ih" ~ "low"))
-
-weekly_size_tall_sorted  
 ```
 
+MB: I combined the chunk below with the one above. The issue, as you discovered, was that notes was interspersed with the size columns, but since the only note was about imposters, I just got rid of those in the data loading steps and dropped the notes columns up there. 
 
 ```{r}
+# 
+# weekly_size_tall <- weekly_size %>% 
+#   left_join(pre_trt_height) %>% 
+#   select(-position, -block, -rack)
+# 
+# col_order <- c("pop", "age", "rep", "treatment", "10_09_height_cm", "10_09_numleaf", "10_18_height_cm",  "10_18_numleaf", "10_23_height_cm", "10_23_numleaf", "10_30_height_cm", "10_30_numleaf", "height_pretrt_cm", "notes")
+# 
+# weekly_size_tall <- weekly_size_tall[, col_order]
+# 
+# weekly_size_tall_sorted <- weekly_size_tall %>% 
+#   rename(`09_30_height_cm` = height_pretrt_cm) %>% 
+#   pivot_longer(`10_09_height_cm`:`09_30_height_cm`) %>% 
+#   separate(name, 6, into = c("date", "variable")) %>% 
+#   pivot_wider(id_cols = c(pop, age, rep, treatment, date), names_from = variable, values_from = value, values_fn = mean) %>% 
+#   mutate(date = as.Date(paste0(date, 2020), format = "%m_%d_%Y")) %>%
+#   mutate_all(tolower) %>% 
+#   mutate(age = case_when(age == "a1" ~ "7wk",
+#                          age == "a2" ~ "5wk",
+#                          age == "a3" ~ "3wk")) %>%
+#    mutate(elevation = case_when(pop == "sq1" | pop == "wl2" | pop == "yo1" | pop == "sq3" ~ "high",
+#                                pop == "dpr" | pop == "kc2" | pop == "wl1" ~ "intermediate",
+#                                pop == "tm2" | pop == "bh" | pop == "ih" ~ "low"))
+# 
+# weekly_size_tall_sorted  
+
+```
+
+
+```{r}
+
 wilting_dates = read_xlsx("data/cbs_drought_project.xlsx", 
                            sheet = "Weekly Surveys (Flipped)") %>% 
   rename(pop = Population, rep = Replicate) %>% 
-  rename_all(.funs = tolower) %>% 
-  mutate(wilted = as.numeric(wilted))
-# Some of these are still coded as month_day, let's make them consistent
+  rename_all(.funs = tolower)
+
+table(wilting_dates$notes)
+
+wilting_dates_clean = wilting_dates %>% 
+  filter(is.na(notes))
+
 ```
 
+The numbers in this data sheet correspond to the day of the experiment: `day 0`, `day 2`, and so on and so forth. On a calendar, the first day of the experiment was 10/01/2020 and the first day of observations was 10/09/2020.
+MB: there are a lot of values <9 in the data. So is day 0 (or day 1?) October 1 or October 9?
+
+
+
 Exploring data:
+
 ```{r}
 summary(pre_trt_height)
 ```
-*What date were these measurements made on and were the # leaves and longest leaf measurements completed?*
-Measurements were made on 9/30/2020. Number of leaves should have been completed, but longest leaf measurements were most likely forgone for lack of follow-up measurements (not enough time/energy to continue follow-up).
+
 
 *One height measurement is missing*: Yes, KC2-A1-10 is missing. I will look into my data sheets to see if it was recorded.
+
+```{r}
+summary(weekly_size)
+```
+
+*Let's make sure to write down metadata about how each of these was scored, i.e., what does a leaning vs. curled vs. wrinkled vs. wilted plant look like?* Great idea: here's a rough list so I don't forget later.
++ `Leaning` phenotypes were designated when the upper half of the plant (closer to the top) were beginning to lean down at ~45-65 degree angles (were not "standing up straight").
++ `Curled` phenotypes were designated when the plant leaves began to curl in on themselves.
++ `Wrinkled` phenotypes were designated when the plant leaves began to show signs of wrinkling (e.g. no longer smooth or flat).
++ `Wilted` phenotypes were designated when the plant was "dry" and crisp to the touch.
++ `Color` phenotypes were designated based on the color of the plant at the time of observation. Dates were written when the plant was beginning to show a *new* phenotype only, i.e., it was recorded once that a plant transitioned to redgreen and once recorded when transitioned to red.
+
+*Also, let's document what the numbers mean in the weekly surveys. Is it day of month or day of expt. and if day of expt, what is day 1?*
 
 ```{r}
 table(pre_trt_height$pop)
 table(pre_trt_height$treatment)
 ```
 
-*WL2 is over-represented by 1, WL1 is underrepresented by 1, is this a mix-up?*
-```{r}
-table(pre_trt_height$pop,pre_trt_height$block, pre_trt_height$age)
-```
-*Occurs in block 10, Age 3...* It has been corrected as of 4/4/2021: The mix-up was due to a typo.
-*There is also an instance of 2 IH A1 seedlings in block 12 and no IH A3 seedling in block 12* It has been corrected as of 4/4/2021: The mix-up was due to a typo on the label.
-
-```{r}
-summary(pre_trt_height)
-```
-
 ```{r}
 boxplot(pre_trt_height$height_pretrt_cm ~ pre_trt_height$pop)
 ```
-*Are blocks/racks in pretrt height the final positions, or positions before rearrangement?* Blocks and racks in the pretrt height are their "final" positions after the rearrangement to make a full six racks.
 
-```{r}
-summary(weekly_size)
-```
 
 ```{r}
 boxplot(weekly_size$`10_09_height_cm` ~ weekly_size$pop)
 ```
-*Outlier at 29. Data entry error or one of the non-streptanthus tricksters?* Fixed as of 4/4/2021: data entry error (transposed a `.`)
 
 ```{r}
 hist(weekly_size$`10_18_height_cm`, breaks = 40)
@@ -144,48 +189,22 @@ hist(weekly_size$`10_30_height_cm`, breaks = 40)
 ```{r}
 boxplot(weekly_size$`10_30_height_cm` ~ weekly_size$pop)
 ```
-*Outlier at 21.5. Data entry error or one of the non-streptanthus tricksters?* Indeed, a non-Steptanthus trickster! SQ3-A2-10.
 
-```{r}
-check = weekly_size %>% 
-  group_by(pop, age, rep, treatment) %>% 
-  summarize(n = n())
-```
-*When weekly size is made tall, get an error message about non-unique values. Why?* Fixed on 4/4/2021. See above.
-
-```{r}
-summary(wilting_dates)
-```
-
-*We should finish coding these consistently-some are numbers and some are dates with an underscore still.* Fixed on 4/4/2021.
-
-*Let's make sure to write down metadata about how each of these was scored, i.e., what does a leaning vs. curled vs. wrinkled vs. wilted plant look like?* Great idea: here's a rough list so I don't forget later.
-+ `Leaning` phenotypes were designated when the upper half of the plant (closer to the top) were beginning to lean down at ~45-65 degree angles (were not "standing up straight").
-+ `Curled` phenotypes were designated when the plant leaves began to curl in on themselves.
-+ `Wrinkled` phenotypes were designated when the plant leaves began to show signs of wrinkling (e.g. no longer smooth or flat).
-+ `Wilted` phenotypes were designated when the plant was "dry" and crisp to the touch.
-+ `Color` phenotypes were designated based on the color of the plant at the time of observation. Dates were written when the plant was beginning to show a *new* phenotype only, i.e., it was recorded once that a plant transitioned to redgreen and once recorded when transitioned to red.
-
-*Also, let's document what the number means. Is it day of month or day of expt. and if day of expt, what is day 1?*
-The numbers in this data sheet correspond to the day of the experiment: `day 0`, `day 2`, and so on and so forth. On a calendar, the first day of the experiment was 10/01/2020 and the first day of observations was 10/09/2020.
-
-```{r}
-table(wilting_dates$age)
-```
-*One age is "1".* Fixed on 4/4/2021. Data entry error.
+<!-- Resolved data entry issues -->
+<!-- *WL2 is over-represented by 1, WL1 is underrepresented by 1, is this a mix-up?* -->
+<!-- *Occurs in block 10, Age 3...* It has been corrected as of 4/4/2021: The mix-up was due to a typo. -->
+<!-- *There is also an instance of 2 IH A1 seedlings in block 12 and no IH A3 seedling in block 12* It has been corrected as of 4/4/2021: The mix-up was due to a typo on the label. -->
+<!-- *Are blocks/racks in pretrt height the final positions, or positions before rearrangement?* Blocks and racks in the pretrt height are their "final" positions after the rearrangement to make a full six racks. -->
+<!-- *Outlier at 29. Data entry error or one of the non-streptanthus tricksters?* Fixed as of 4/4/2021: data entry error (transposed a `.`) -->
+<!-- *Outlier at 21.5. Data entry error or one of the non-streptanthus tricksters?* Indeed, a non-Steptanthus trickster! SQ3-A2-10. -->
+<!-- *When weekly size is made tall, get an error message about non-unique values. Why?* Fixed on 4/4/2021. See above. -->
+<!-- *We should finish coding these consistently-some are numbers and some are dates with an underscore still.* Fixed on 4/4/2021. -->
+<!-- *One age is "1".* Fixed on 4/4/2021. Data entry error. -->
 
 
 ```{r}
-
+summary(weekly_size_tall_sorted)
 ```
-
-
-
-
-
-
-
-
 
 
 
@@ -195,40 +214,136 @@ table(wilting_dates$age)
 ## Weekly Survey Analysis: Phenotypic Differences
 
 Loading data:
+
 ```{r}
+
 weekly_pheno <- readxl::read_xlsx("data/cbs_drought_project.xlsx", sheet = "Weekly Surveys (Flipped)")
 weekly_pheno
+table(weekly_pheno$notes)
+
 ```
 
 Numbers in the phenotype columns denote the numeric (and not calendar day) in which the phenotype was observed (e.g. day 0, day 17, etc.)
 
 Cleaning data
+
 ```{r}
+
 weekly_pheno_cleaned <- weekly_pheno %>% 
+  # Get rid of imposters
+  filter(is.na(notes)) %>% 
   clean_names() %>% 
-  mutate_all(tolower) %>% 
-  mutate(elevation = case_when(population == "sq1" | population == "wl2" | population == "yo1" | population == "sq3" ~ "high",
-                               population == "dpr" | population == "kc2" | population == "wl1" ~ "intermediate",
-                               population == "tm2" | population == "bh" | population == "ih" ~ "low")) %>%
-    mutate(age = case_when(age == "a1" ~ "7wk",
-                         age == "a2" ~ "5wk",
-                         age == "a3" ~ "3wk")) %>%
-  select(-rack, -block, -position)
+  # Make consistent with other dataframe
+  rename(pop = population, rep = replicate) %>% 
+  # Let's not use the function below, because it turns numeric columns into characters
+  # mutate_all(tolower) %>% 
+  mutate(age = case_when(age == "A1" ~ "7wk",
+                         age == "A2" ~ "5wk",
+                         age == "A3" ~ "3wk"),
+         elevation = case_when(pop == "SQ1" | pop == "WL2" | pop == "YO1" | pop == "SQ3" ~ "High",
+                               pop == "DPR" | pop == "KC2" | pop == "WL1" ~ "Intermediate",
+                               pop == "TM2" | pop == "BH" | pop == "IH" ~ "Low"),
+         age = as.factor(age),
+         pop = as.factor(pop)) %>% 
+  select(-rack, -block, -position) %>% 
+  # Going to go ahead and get rid of unassigned plants
+  filter(pop != "NONE")
+
 weekly_pheno_cleaned
+
 ```
 
 Checking data
+
 ```{r}
-tabyl(weekly_pheno_cleaned, population)
+
+tabyl(weekly_pheno_cleaned, pop)
+
 ```
 There are 10 populations present, with `none` corresponding to replicates of a population removed from their original position in the rack (due to either a lack of growth, or shuffling to complete priority racks).
 
 ```{r}
+
 summary(weekly_pheno_cleaned)
+
 ```
 
 ```{r}
-table(weekly_pheno_cleaned$population)
+table(weekly_pheno_cleaned$pop)
+
+# Which phenotypes occur frequently in each treatment?
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$green))
+# Not really
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$yellowgreen))
+# Frequent in severe drought
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$redgreen))
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$yellow))
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$brown))
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$curled))
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$wrinkled))
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$leaning))
+
+table(weekly_pheno_cleaned$treatment, is.na(weekly_pheno_cleaned$wilted))
+
 ```
+
+Make plots!
+
+We could consider making some composite columns, ie. the first day any discoloration was observed. I can help with this, it would require making data tall, grouping by plant, then taking the minimum value in each group. 
+
+First, just doing the wilted response. 
+In this case, I think it's only worth plotting the severe drought treatment, because there was only one instance of wilting in the other treatments. 
+
+```{r}
+  
+# The simplest option is to use the ECDF option in ggplot. 
+# But, a trick: it removes NAs, so by default would drop plants that never wilted. We don't want that!
+# Can add a dummy value of a date after all others, but then I would crop this last value out when presenting
+
+weekly_pheno_cleaned %>% 
+  filter(treatment == "Severe drought") %>% 
+  mutate(wilted = ifelse(is.na(wilted), 25, wilted)) %>%
+  ggplot() +
+  stat_ecdf(aes(x = wilted, color = age), geom = "step") +
+  facet_wrap(.~pop)
+
+# Alternative approach: use cumsum
+# This is a bit complicated but gives a bit more plotting flexibility
+
+dummy = crossing(pop = unique(weekly_pheno_cleaned$pop), 
+                 # treatment = unique(weekly_pheno_cleaned$treatment), 
+                 age = unique(weekly_pheno_cleaned$age),
+                 wilted = unique(c(weekly_pheno_cleaned$wilted, 0))) %>% 
+  filter(!is.na(wilted))
+
+weekly_pheno_cleaned %>% 
+  filter(treatment == "Severe drought") %>% 
+  arrange(pop, age, treatment, wilted) %>% 
+  mutate(wiltedyn = !is.na(wilted)) %>% 
+  group_by(pop, age, treatment, wilted) %>% 
+  summarize(num_wilted = sum(wiltedyn), n = n()) %>% 
+  group_by(pop, age, treatment) %>% 
+  mutate(cumulative_wilted = cumsum(num_wilted), 
+         n = sum(n),
+         prop_wilted = cumulative_wilted/n) %>% 
+  ggplot() +
+  geom_point(aes(x = wilted, y = prop_wilted, color = age)) +
+  geom_line(aes(x = wilted, y = prop_wilted, color = age)) +
+  facet_wrap(.~pop)
+
+
+# Need to pull in rack data eventually as a random effect in models.
+
+```
+
+
 
 
